--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
     </main>
 
     <footer class="footer-all">
-        <div class="container">
+        <div class="container div-footer">
             <div class="footer-logo">
                 <a href="./index.html" class="logo-full">Web<span class="web-logo">Studio</span></a>
                 <p class="footer-discr">
