--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                         <div class="sect-second-icon">
                             <svg width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
 
@@ -205,7 +205,7 @@
                     <li class="second-list-title">
                         <div class="sect-second-icon">
                             <svg width="64" height="64">
-                                <use href="./images/icons.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock-1"></use>
                             </svg>
                         </div>
                         <h3 class="studio-discr">Punctuality</h3>
@@ -217,7 +217,7 @@
                     <li class="second-list-title">
                         <div class="sect-second-icon">
                             <svg width="64" height="64">
-                                <use href="./images/icons.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
                             </svg>
                         </div>
                         <h3 class="studio-discr">Diligence</h3>
@@ -229,7 +229,7 @@
                     <li class="second-list-title">
                         <div class="sect-second-icon">
                             <svg width="64" height="64">
-                                <use href="./images/icons.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
                         <h3 class="studio-discr">Technologies</h3>
